# Nado

./: README.md  docs.html  main.py  pyproject.toml
src/: database.py  database.sqlite  main.py
src/api/: __init__.py  templates.py  users.py
src/utils/: generations.py  templates.py  users.py
static/: index.html
templates/: account.html  base.html  login.html  logout.html
tests/api/: test_users.py
